<resources>
    <string name="app_name">BICPI</string>
    <string name="title_text">BICPI</string>
    <string name="login_user_default_text">Korisničko ime</string>
    <string name="login_password_default_text">Lozinka</string>
    <string name="login_button_text">Prijava</string>
    <string name="registration_text">Nisi korisnik? Registriraj se!</string>
    <string name="store_text">Dućan</string>
    <string name="registration_btn_text">Registracija</string>
    <string name="basket_text">Košarica</string>
    <string name="text_title_store">Dućan</string>
    <string name="text_basket_title">Košarica</string>
    <string name="registration_title_text">Registracija</string>
    <string name="name_text">Ime</string>
    <string name="textPersonSurname">Prezime</string>
    <string name="email_text">E-mail</string>
    <string name="oib_text">OIB</string>
    <string name="register_text">Registriraj</string>
    <string name="registered_text">Prijavljeni ste kao</string>
    <string name="business_name_text">Naziv tvrtke</string>
    <string name="business_user_text">Poslovni korisnik</string>
    <string name="private_user_text">Privatni korisnik</string>
    <string name="text_registered_as">Prijavljeni ste kao</string>
    <string name="user_data_text">Podaci korisnika</string>
    <string name="text_logout">Odjava</string>
    <string name="contact_name_text">Ime kontakta</string>
    <string name="contact_email_text">Email kontakta</string>
    <string name="contact_number_text">Telefonski broj</string>
    <string name="login_title_text">BICPI</string>
    <string name="text_business_request_desc">Opis usluge</string>
    <string name="text_business_request_title">Naslov usluge</string>
    <string name="text_business_request_contact_email">Email kontakta</string>
    <string name="text_business_request_contact_number">Broj kontakta</string>
    <string name="send_business_request_text">Pošalji</string>
    <string name="extra_services_title">Dodaj uslugu</string>
    <string name="transaction_history_text">Povijest transakcija</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="purchased_text">Kupljeno!</string>
    <string name="title_activity_add_paper">AddPaperActivity</string>
</resources>