<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayoutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/menuScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleView">

        <LinearLayout
            android:id="@+id/menuLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".view.MenuActivity">

            <Button
                android:id="@+id/storeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_light"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/store_text"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />

            <Button
                android:id="@+id/basketBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_round_light"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/basket_text"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:visibility="visible" />


            <Button
                android:id="@+id/narudzbeListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_round_light"

                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="Narudžbe"
                android:textSize="24sp"
                android:visibility="gone" />


            <Button
                android:id="@+id/transactionHistoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_round_light"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="Povijest narudžba"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_round_light"
            android:text="@string/login_button_text"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStoreBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round_light"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/registration_btn_text"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStoreBtn" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/text_logout"
            android:textSize="24sp"
            android:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>